# batch-file-rename

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  app.rc  conanfile.py
src/: MainFrame.cpp  MainFrame.h  main.cpp
